DE-272 Merchant can setup the configuration

--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,7 @@
             "email": "devexdev@gmail.com"
         }
     ],
-    "minimum-stability": "stable",
+    "minimum-stability": "dev",
     "autoload": {
         "psr-4": {"DOKU\\": "src/DOKU/"}
     },
